Adding gulp watch & watcher task for browserify
Also fixing indentation on:

gulp/index.js
gulp/browserify.js

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "browserify": "latest",
     "eslint": "latest",
     "gulp": "latest",
-    "gulp-jscs": "latest",
-    "gulp-jshint": "latest",
+    "gulp-watch": "latest",
     "vinyl-source-stream": "latest"
   }
 }
