Add Support for Templates
Adding new methods to utils & directives

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "latest",
     "gulp": "latest",
     "gulp-watch": "latest",
+    "stringify": "latest",
     "vinyl-source-stream": "latest"
   }
 }
