--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "babelify": "latest",
     "browserify": "latest",
     "eslint": "latest",
+    "git-guppy": "latest",
     "gulp": "latest",
+    "gulp-eslint": "latest",
     "gulp-watch": "latest",
     "stringify": "latest",
     "vinyl-source-stream": "latest"
