Changing Jasmine by Mocha, Chai & Sinon

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "gulp-watch": "latest",
     "karma": "latest",
     "karma-browserify": "latest",
-    "karma-jasmine": "latest",
+    "karma-chai": "latest",
+    "karma-mocha": "latest",
+    "karma-mocha-reporter": "latest",
     "karma-firefox-launcher": "latest",
     "karma-sinon": "latest",
     "mocha": "latest",
