--- a/.eslintrc
+++ b/.eslintrc
@@ -3,27 +3,67 @@
     "es6": true
   },
   "rules": {
-    "eqeqeq": 0,
-    "strict": 0,
     "accessor-pairs": 0,
+    "block-scoped-var": 2,
     "brace-style": [2, 1tbs],
     "comma-dangle": [2, never],
+    "complexity": [2, 8],
     "consistent-return": 2,
     "dot-location": [2, property],
     "dot-notation": 2,
     "eol-last": 2,
+    "eqeqeq": 0,
     "indent": [2, 2, {SwitchCase: 1}],
     "jsx-quotes": [2, prefer-double],
+    "max-depth": [2, 5],
+    "max-len": [2, 110, 4],
+    "max-statements": [2, 40],
+    "no-alert": 2,
     "no-bitwise": 0,
+    "no-console": 2,
     "no-dupe-class-members": 2,
+    "no-else-return": 2,
+    "no-empty": 2,
+    "no-eq-null": 2,
+    "no-eval": 2,
+    "no-ex-assign": 2,
+    "no-extra-boolean-cast": 2,
+    "no-extra-parens": 2,
+    "no-extra-semi": 2,
+    "no-fallthrough": 2,
+    "no-floating-decimal": 2,
+    "no-func-assign": 2,
+    "no-implied-eval": 2,
+    "no-inner-declarations": [2, "both"],
+    "no-invalid-regexp": 2,
+    "no-invalid-this": 2,
+    "no-irregular-whitespace": 2,
+    "no-iterator": 2,
+    "no-lone-blocks": 2,
     "no-multi-spaces": 2,
+    "no-multi-str": 2,
+    "no-negated-in-lhs": 2,
+    "no-new": 2,
+    "no-new-func": 2,
+    "no-new-wrappers": 2,
+    "no-obj-calls": 2,
+    "no-redeclare": 2,
+    "no-regex-spaces": 2,
     "no-restricted-syntax": [2, WithStatement],
+    "no-sparse-arrays": 2,
+    "no-unexpected-multiline": 2,
+    "no-unreachable": 2,
     "no-unused-expressions": 2,
     "no-unused-vars": [2, {args: none}],
     "quotes": [2, single, avoid-escape],
+    "semi": [2, "always"],
     "space-after-keywords": 2,
     "space-before-blocks": 2,
     "space-before-keywords": 2,
-    "strict": [2, global]
+    "strict": 0,
+    "strict": [2, global],
+    "use-isnan": 2,
+    "valid-typeof": 2,
+    "vars-on-top": 2
   }
 }
